...
import CoreLocation
import NatParkSwiftKit

enum Category: String, CaseIterable, Codable, Hashable {
    case featured = "National Park"
    case nationalMonument = "National Monument"
    case others = "Others"
}

struct Park: Hashable, Decodable, Identifiable {
    var id: Int
    let parkCode: String
    var name: String
...
